--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,15 @@ after_success:
   - docker push babbar/multi-nginx
   - docker push babbar/multi-server
   - docker push babbar/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-2
+  app: multi-docker
+  env: MultipleDocker-env
+  bucket_name: elasticbeanstalk-us-east-2-702077489099
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
